Jan 30, 2014 (v0.2) ---
  Support bounded constraints.

Jan 22, 2014 (v0.1.1) ---
  Minor update for robustness.

Jan 20, 2014 (v0.1) ---
  Infrastructure and documentation.
  Levenberg-Marquardt algorithm.