@@ -4,7 +4,7 @@ NLLSBox --- A matlab toolbox for nonlinear least squares problem.
 
 Author: Ying Xiong.
 Created: Jan 20, 2014.
-Release: Jan 30, 2014(v0.2).
+Release: Feb 05, 2014(v0.2.1).
 
 ================================================================
 Quick start.
@@ -35,5 +35,6 @@ Features.
 * Same interface but better than 'lsqnonlin'.
 * Levenberg-Marquardt algorithm.
 * Support bounded constraints.
+* Support using finite difference to compute Jacobian matrix.
 
 See 'NonlinearLeastSquares.pdf' for a more detailed documentation.
